# glyphvis

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
projects/: debug.json  small-cir-d2.json  ulsan.json  ulsan.json.bak  ulsan_old.json
src/: folder_tree.txt  lib.rs  main  main.rs  models.rs
src/animation/: animation_manager.rs  animation_manager_old.rs  mod.rs  movement.rs  segment_animation.rs  slide_movement.rs  stretch.rs  stretch_old.rs  stroke_order.rs  transition.rs
src/animation/movement/: mod.rs
src/animation/segment_animations/: glyph_transition.rs  transition.rs
src/animation/transition/: mod.rs
src/config/: config_load.rs  config_types.rs  mod.rs  runtime.rs
src/controllers/: glyph_controller.rs  mod.rs  osc.rs
src/controllers/osc/: mod.rs
src/draw/: grid_draw.rs  mod.rs  path_draw.rs
src/effects/: backbone_fx.rs  background_fx.rs  effects_manager.rs  grid_effects.rs  grid_fx.rs  init_effects.rs  initializer.rs  mod.rs  power_on_effect.rs  segment_effects.rs
src/models/: data_model.rs  geometry.rs  glyph_model.rs  grid_model.rs  mod.rs
src/render/: glyph_display.rs  glyph_renderer.rs  grid_renderer.rs  mod.rs  path_renderer.rs  renderer.rs
src/services/: bpm_service.rs  frame_recorder.rs  frame_recorder_jpg.rs  frame_recorder_old.rs  grid_service.rs  mod.rs  osc_service.rs  path_service.rs  segment_graph.rs
src/services/grid/: grid_helper.rs  mod.rs  segment_graph.rs
src/utilities/: easing.rs  grid_utility.rs  mod.rs  segment_analysis.rs  segment_init.rs  segment_utility.rs
src/views/: background.rs  mod.rs
(+15 files in other folders)
