[package]
name = "glyphvis"
version = "0.0.1"
authors = ["13thEye <jjhh@13theye.com>"]
edition = "2021"

[dependencies]
nannou = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"

[lib]
name = "glyphvis"
path = "src/lib.rs"

[[bin]]
name = "glyphvis"
path = "src/main.rs"
