[package]
name = "glyphvis"
version = "0.2.1"
authors = ["13thEye <jjhh@13theye.com>"]
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
nannou = "0.19"
nannou_osc = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
rand = "0.8"
rayon = "1.10.0"
toml = "0.8"

[dev-dependencies]
pollster = "0.3"

[lib]
name = "glyphvis"
path = "src/lib.rs"

[[bin]]
name = "glyphvis"
path = "src/main.rs"
